--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-light navbar-expand bg-light ps-5">
   <a class="navbar-brand">{{title}}</a>
-  <a [routerLink]="['']">Accueil </a>
-  <a [routerLink]="['movies']"> Gestion de films</a>
+  <a class='nav-item nav-link' [routerLink]="['']">Accueil </a>
+  <a class='nav-item nav-link ms-3' [routerLink]="['movies']"> Gestion de films</a>
 </nav>
 
