--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,5 +1,17 @@
 <main>
-@for (movie of movies$ | async; track movie.id) {
-  <app-movie-card [movie]="movie" ></app-movie-card>
-}
+<div class="container mt-4">
+  <h2 class="mb-3">Films</h2>
+
+  @if (movies$ | async; as movies) {
+    <div class="d-flex flex-column gap-3">
+      @for (movie of movies; track movie.id) {
+        <app-movie-card
+          [movie]="movie"
+          (favorite)="onFavorite($event)"
+          (buy)="onBuy($event)">
+        </app-movie-card>
+      }
+    </div>
+  }
+</div>
 </main>
