--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 <main>
 <div class="container mt-4">
   <h2 class="mb-3">Films</h2>
@@ -14,11 +14,4 @@
       }
     </div>
   }
-</div>
-</main>
-=======
-
-@for (movie of movies$ | async; track movie.id) {
-  <app-movie-card [movie]="movie" ></app-movie-card>
-}
->>>>>>> d6544999098bcdf2c5e22201564ed3c41554fcd4
+</div></main>
